Fixed missing border issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -116,9 +116,10 @@ body, html {
 }
 
 
-.form-control:valid, .form-control.is-valid {
-    border: none;
-}
+// .form-control:valid, .form-control.is-valid {
+//     border: none;
+// }
+
 .btn-info{
   margin-left:-25px;
   width: 25%;
